--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Price Cards</title>
+    <title>LBI Investimentos</title>
     <link rel="stylesheet" href="estilos/styles.css">
     <link rel="shortcut icon" href="img/LBI_logo.png" type="image/x-icon">
 </head>
@@ -41,7 +41,7 @@
         <section class="pricing">
             <div class="pricing-plan">
                 <h2 class="pricing-plan__title">Essencial</h2>
-                <p><span class="pricing-plan__price">R$ 3.95</span></p>
+                <p><span class="pricing-plan__price">R$ 29,90</span></p>
                 <ul class="pricing-plan__features">
                     <li>10 videoaulas gravadas</li>
                     <li>100 reais investidos na carteira de treino</li>
@@ -52,7 +52,7 @@
 
             <div class="pricing-plan">
                 <h2 class="pricing-plan__title">Premium</h2>
-                <p><span class="pricing-plan__price">R$ 7.95</span></p>
+                <p><span class="pricing-plan__price">R$ 49.90</span></p>
                 <ul class="pricing-plan__features">
                     <li>20 videoaulas gravadas</li>
                     <li>400 reais na carteira de treino</li>
@@ -64,7 +64,7 @@
 
             <div class="pricing-plan">
                 <h2 class="pricing-plan__title">Gold</h2>
-                <p><span class="pricing-plan__price">R$ 13.95</span></p>
+                <p><span class="pricing-plan__price">R$ 69.90</span></p>
                 <ul class="pricing-plan__features">
                     <li>30 videoaulas gravadas</li>
                     <li>1000 reais na carteira de treino</li>
