Correção alert de envio

--- a/contato.html
+++ b/contato.html
@@ -50,7 +50,7 @@
             localStorage.setItem('phone', phone);
 
             // Exibe uma mensagem de confirmação
-            alert('Formulário enviado com sucesso!');
+            alert('Formulário enviado com sucesso! Atenção: Informações salvas na console da página');
 
             // Opcional: Limpar o formulário
             document.getElementById('contactForm').reset();
